# Columnar-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: aggregate.hpp  batch.hpp  chunk_info.hpp  column.hpp  columnar_reader.hpp  columnar_writer.hpp  csv_reader.hpp  csv_writer.hpp  data_type.hpp  expression.hpp  operator.hpp  schema.hpp
include/converter/: columnar_reader.hpp  columnar_writer.hpp  conversion_batch.hpp  csv_reader.hpp  csv_writer.hpp  parsing.hpp
script/: build.sh  run_query.sh
scripts/: build.sh  convert.sh  run_query.sh  setup.sh
src/: CMakeLists.txt  batch.cpp  columnar_reader.cpp  columnar_writer.cpp  csv_reader.cpp  csv_writer.cpp  expression.cpp  operator.cpp  schema.cpp
src/converter/: CMakeLists.txt  columnar_reader.cpp  columnar_writer.cpp  conversion_batch.cpp  csv_reader.cpp  csv_writer.cpp  parsing.cpp
src/execution/: CMakeLists.txt  aggregate.cpp  aggregate.hpp  expression.cpp  expression.hpp  operator.cpp  operator.hpp
src/io/: CMakeLists.txt  columnar_reader.cpp  columnar_reader.hpp  columnar_writer.cpp  columnar_writer.hpp  csv_reader.cpp  csv_reader.hpp  csv_writer.cpp  csv_writer.hpp  parsing.cpp  parsing.hpp
src/runner/: CMakeLists.txt  query_builder.cpp  query_builder.hpp  runner.cpp
src/storage/: CMakeLists.txt  batch.cpp  batch.hpp  chunk_info.hpp  column.cpp  column.hpp  conversion_batch.cpp  conversion_batch.hpp  schema.cpp  schema.hpp
tests/: CMakeLists.txt  data.csv  data_reconstructed.csv  output.columnar  schema.csv  schema_reconstructed.csv  schema_sample.csv  test_full_cycle.cpp  test_queries.cpp
tools/: assert.hpp  config.hpp  csv_utils.hpp  parse_error.hpp
